--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
 </head>
 <body>
     <div id="gameInfo">
+       SNAKE GAME
+    </div>
+    <div id="gameInfo">
         <div id="score">점수: 0</div>
         <div id="level">레벨: 1</div>
         <div id="lives">생명: 3</div>
